<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ar_linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:text="@string/score"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/ar_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/_0"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dip"
        android:text="@string/record"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/ar_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/_0"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ar_recordCongrats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/new_record_congratulations"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/ar_btnPlayAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/play_again" />

    <Button
        android:id="@+id/ar_btnMainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/main_menu" />
</LinearLayout>