<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ag_constraitLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_2"
    tools:context=".GameActivity">

    <ToggleButton
        android:id="@+id/tg5"
        style="@style/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dip"
        android:background="@drawable/ic_toggle_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/tg4"
        style="@style/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dip"
        android:background="@drawable/ic_toggle_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tg5"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/tg6"
        style="@style/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dip"
        android:background="@drawable/ic_toggle_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tg5"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/tg2"
        style="@style/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dip"
        android:background="@drawable/ic_toggle_bg"
        app:layout_constraintBottom_toTopOf="@+id/tg5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ToggleButton
        android:id="@+id/tg8"
        style="@style/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dip"
        android:background="@drawable/ic_toggle_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tg5" />

    <ToggleButton
        android:id="@+id/tg1"
        style="@style/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dip"
        android:background="@drawable/ic_toggle_bg"
        app:layout_constraintBottom_toTopOf="@+id/tg4"
        app:layout_constraintEnd_toStartOf="@+id/tg2" />

    <ToggleButton
        android:id="@+id/tg3"
        style="@style/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dip"
        android:background="@drawable/ic_toggle_bg"
        app:layout_constraintBottom_toTopOf="@+id/tg6"
        app:layout_constraintStart_toEndOf="@+id/tg2" />

    <ToggleButton
        android:id="@+id/tg7"
        style="@style/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dip"
        android:background="@drawable/ic_toggle_bg"
        app:layout_constraintEnd_toStartOf="@+id/tg8"
        app:layout_constraintTop_toBottomOf="@+id/tg4" />

    <ToggleButton
        android:id="@+id/tg9"
        style="@style/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dip"
        android:background="@drawable/ic_toggle_bg"
        app:layout_constraintStart_toEndOf="@+id/tg8"
        app:layout_constraintTop_toBottomOf="@+id/tg6" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tg2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.164" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tg2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.164" />

    <TextView
        android:id="@+id/ag_scoreCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/_0"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/ag_timeCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_30"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tg2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.103" />
</androidx.constraintlayout.widget.ConstraintLayout>